# src/middlewares/validators/index.js
@@ -1,1 +1,3 @@
 module.exports.createUserPayloadValidator = require('./createUserPayload');
+module.exports.createProductPayloadValidator = require('./products/createProductPayload');
+module.exports.updateProductPayloadValidator = require('./products/updateProductPayload');
